--- a/todo/assets/css/basic.css
+++ b/todo/assets/css/basic.css
@@ -16,6 +16,12 @@ body {
 .header {
     margin: 10px auto;
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header-content {
+    display: flex;
     gap: 20px;
     align-items: center;
 }
@@ -186,5 +192,18 @@ body {
 @media screen and (max-width: 650px) {
     #todo-data {
         grid-template-columns: 1fr;
+    }
+
+    .header {
+        flex-direction: column-reverse;
+        gap: 20px;
+    }
+
+    .header-fn {
+        width: 100%;
+    }
+
+    .header-fn .btn {
+        width: 100%;
     }
 }
